# account-books

./: .eslintrc.cjs  .gitignore  .stylelintrc.cjs  package.json  pnpm-lock.yaml  vitest.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: icons.tsx  navbar.tsx  theme-switch.tsx
src/config/: site.ts
src/layouts/: default.tsx
src/test/: App.test.tsx  main.test.tsx
